--- a/swagger-demo/package.json
+++ b/swagger-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intro",
+  "name": "swagger-demo",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -27,7 +27,9 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
-    "mongoose": "^5.12.4",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "mongoose": "^5.12.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
